<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.android.droidcafeoptions.MainActivity">
    <item android:id="@+id/action_sort_ascending"
          android:orderInCategory="1"
          android:title="@string/sort_ascending"
          app:showAsAction="never"/>
    <item android:id="@+id/action_sort_descending"
          android:orderInCategory="2"
          android:title="@string/sort_descending"
          app:showAsAction="never"/>
    <item android:id="@+id/action_clear_sort"
          android:orderInCategory="3"
          android:title="@string/action_clear_sort"
          app:showAsAction="never"/>
    <item android:id="@+id/action_clear_filter"
          android:orderInCategory="4"
          android:title="@string/clear_filter"
          app:showAsAction="never"/>
</menu>