<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.venue.VenueActivity"
        android:id="@+id/container">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:id="@+id/toolbar_title"/>

    </android.support.v7.widget.Toolbar>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="24dp"
            android:paddingBottom="8dp">
        <TextView
                android:id="@+id/venue_name"
                android:text="@string/venue_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/text_color"
                android:fontFamily="@font/roboto_regular"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:id="@+id/venue_temperature"
                tools:text="0℃"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/weather_color"
                android:textSize="40sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:id="@+id/venue_condition"
                android:text="@string/venue_condition_unknown"
                android:textColor="@color/text_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/venue_name"/>

    </android.support.constraint.ConstraintLayout>

    <View android:layout_width="match_parent"
          android:layout_height="0.5dp"
          android:background="@android:color/darker_gray"
          android:layout_marginStart="24dp"
          android:layout_marginEnd="24dp"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="24dp"
            android:paddingBottom="8dp">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/linearLayout1"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp">
            <TextView
                    android:id="@+id/venue_feels_like"
                    android:text="@string/venue_feels_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/text_color"
                    android:fontFamily="@font/roboto_bold"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:id="@+id/venue_feels_like_data"
                    tools:text="16℃"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/weather_color"
                    app:layout_constraintTop_toBottomOf="@+id/venue_feels_like"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/linearLayout2"
                app:layout_constraintVertical_bias="0.0" app:layout_constraintStart_toEndOf="@+id/linearLayout1"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout3">
            <TextView
                    android:id="@+id/venue_humidity"
                    android:text="@string/venue_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/text_color"
                    android:fontFamily="@font/roboto_bold"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:id="@+id/venue_humidity_data"
                    tools:text="20%"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/weather_color"
                    app:layout_constraintTop_toBottomOf="@+id/venue_feels_like"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/linearLayout3"
                app:layout_constraintVertical_bias="0.0"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent">

            <TextView
                    android:id="@+id/venue_wind"
                    android:text="@string/venue_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/text_color"
                    android:fontFamily="@font/roboto_bold"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:id="@+id/venue_wind_data"
                    tools:text="ESE at 17kph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/weather_color"
                    android:fontFamily="@font/roboto_regular"
                    app:layout_constraintTop_toBottomOf="@+id/venue_feels_like"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

    <View android:layout_width="match_parent"
          android:layout_height="0.5dp"
          android:background="@android:color/darker_gray"
          android:layout_marginStart="24dp"
          android:layout_marginEnd="24dp"/>

    <TextView
            android:id="@+id/venue_last_updated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="24dp"
            android:textSize="12sp"
            android:textColor="@color/text_color"
            android:fontFamily="@font/roboto_regular"
            tools:text="Last updated: 9:00am 01 December 2017"
            android:textAlignment="center"/>


</LinearLayout>